# V64-Engine

./: .gitignore  CMakeLists.txt  README.md  V64EngineConfig.cmake.in  glad.c  v64engine.cpp  v64engine.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
core/: event.cpp  render.cpp  window.cpp
game/: camera.cpp  object.cpp
include/: camera.h  event.h  object.h  render.h  window.h
